--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.1.1",
     "ng-circle-progress": "^1.6.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.5",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
