--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^5.1.1",
+    "moment": "^2.29.1",
     "ng-circle-progress": "^1.6.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.5",
