--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.1.1",
     "moment": "^2.29.1",
     "ng-circle-progress": "^1.6.0",
+    "ngx-spinner": "^12.0.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.5",
     "tslib": "^2.2.0",
