--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "moment": "^2.29.1",
     "ng-circle-progress": "^1.6.0",
     "ngx-spinner": "^12.0.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.7",
     "sweetalert2": "^11.1.5",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
