--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.1.0",
     "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^5.1.1",
+    "chart.js": "^3.5.1",
     "moment": "^2.29.1",
     "ng-circle-progress": "^1.6.0",
     "ngx-spinner": "^12.0.0",
